Update license to Apache 2.0, remove default capabilities file, adjust development URL, modify window dimensions, and introduce desktop capabilities configuration.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,7 +3,7 @@ name = "code-ai-assistant"
 version = "0.1.0"
 description = "A desktop application with code editor, AI chat assistant, CLI output and terminal functionality"
 authors = ["chaorenex1 243537608z@gmail.com"]
-license = "MIT"
+license = "apache-2.0"
 edition = "2021"
 repository = ""
 homepage = ""
