--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,6 +3,9 @@
   "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "compilerOptions": {
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@/*":["./src/*"]
+    }
   }
 }
