feat: Implement settings integration with backend and frontend
- Added settings management functionality in Rust backend (Tauri):
  - Implemented commands for getting, saving, resetting, and managing settings.
  - Created a new SQLite database migration for settings table.

- Developed Vue/TypeScript frontend for settings panel:
  - Implemented loading, saving, and resetting settings.
  - Defined naming conventions for settings keys across different categories.

- Created repositories for settings and recent directories management.
- Added models for settings and recent directories.
- Implemented PowerShell and Bash scripts for creating new migration files.
- Enhanced documentation for settings integration and application architecture.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@element-plus/icons-vue": "^2.3.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.4.2",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
@@ -45,6 +46,7 @@
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
