--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ time = { version = "0.3", features = ["macros", "formatting"] }
 config = "0.15.19"
 clap = { version = "4.0", features = ["derive"] }
 sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
+sea-orm-migration = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
